# Project2-AOS6210

cs6210-project2-master/: CMakeLists.txt  README  combined_barrier.c  combined_barrier.h  helpers.h  mpi_barriers.h  mpi_dissemination_barrier.c  mpi_dissemination_barrier.h  mpi_mcs_barrier.c  mpi_mcs_barrier.h  mpi_tournament_barrier.c  mpi_tournament_barrier.h  omp_barriers.h  omp_centralized_barrier.c  omp_centralized_barrier.h  omp_dissemination_barrier.c  omp_dissemination_barrier.h  omp_mcs_barrier.c  omp_mcs_barrier.h  omp_tournament_barrier.c  omp_tournament_barrier.h  omp_tree_barrier.c  omp_tree_barrier.h
cs6210-project2-master/tests/: Makefile  combined_test0.c  combined_test0_2nodes.sh  combined_test0_3nodes.sh  combined_test0_4nodes.sh  combined_test0_5nodes.sh  combined_test0_6nodes.sh  combined_test0_7nodes.sh  combined_test0_8nodes.sh  combined_test1.c  mpi_test0.c  mpi_test0_10nodes.sh  mpi_test0_11nodes.sh  mpi_test0_12nodes.sh  mpi_test0_2nodes.sh  mpi_test0_3nodes.sh  mpi_test0_4nodes.sh  mpi_test0_5nodes.sh  mpi_test0_6nodes.sh  mpi_test0_7nodes.sh  mpi_test0_8nodes.sh  mpi_test0_9nodes.sh  mpi_test1.c  omp_padded_test0.sh  omp_test0.c  omp_test0.sh  omp_test1.c
cs6210-project2-master/timing/: Makefile  combined_barrier_timing.c  combined_barrier_timing2.c  combined_timing2_2nodes.sh  combined_timing2_3nodes.sh  combined_timing2_4nodes.sh  combined_timing2_5nodes.sh  combined_timing2_6nodes.sh  combined_timing2_7nodes.sh  combined_timing2_8nodes.sh  combined_timing_2nodes.sh  combined_timing_3nodes.sh  combined_timing_4nodes.sh  omp_timing.sh  (+29 more)
